-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.16.0
-
None
-
Any lustre client running maloo sanity test 400b
-
3
-
9223372036854775807
The recent landing of ("LU-16524 nodemap: add rbac property to nodemap") causes sanity 400b to fail. This test ensures the UAPI headers can be compiled by user land. The failure is:
lustre_disk.h:266:18: error: 'LUSTRE_NODEMAP_NAME_LENGTH' undeclared here (not in a function) char ncr_name[LUSTRE_NODEMAP_NAME_LENGTH + 1]; ^~~~~~~~~~~~~~~~~~~~~~~~~~ lustre_disk.h:267:20: error: 'ncr_flags' is narrower than values of its type [-Werror] enum nm_flag_bits ncr_flags:8; ^~~~~~~~~ lustre_disk.h:267:20: error: field 'ncr_flags' has incomplete type lustre_disk.h:268:21: error: 'ncr_flags2' is narrower than values of its type [-Werror] enum nm_flag2_bits ncr_flags2:8; ^~~~~~~~~~ lustre_disk.h:268:21: error: field 'ncr_flags2' has incomplete type lustre_disk.h:277:2: error: unknown type name 'lnet_nid_t' lnet_nid_t nrr_start_nid; ^~~~~~~~~~ lustre/lustre_disk.h:278:2: error: unknown type name 'lnet_nid_t' lnet_nid_t nrr_end_nid; ^~~~~~~~~~