lustre/include/uapi/linux/lustre/lustre_idl.h
@@ -3674,23 +3674,6 @@ struct llog_update_record {
 				     SELINUX_POLICY_VER_LEN + \
 				     SELINUX_POLICY_HASH_LEN + 3)
 
-#define LUSTRE_NODEMAP_NAME_LENGTH 16
-
-/* lu_nodemap flags */
-enum nm_flag_bits {
-	NM_FL_ALLOW_ROOT_ACCESS = 0x1,
-	NM_FL_TRUST_CLIENT_IDS = 0x2,
-	NM_FL_DENY_UNKNOWN = 0x4,
-	NM_FL_MAP_UID = 0x8,
-	NM_FL_MAP_GID = 0x10,
-	NM_FL_ENABLE_AUDIT = 0x20,
-	NM_FL_FORBID_ENCRYPT = 0x40,
-	NM_FL_MAP_PROJID = 0x80,
-};
-enum nm_flag2_bits {
-	NM_FL2_READONLY_MOUNT = 0x1,
-};
-
 /** enums containing the types of ids contained in a nodemap
  * kept so other modules (mgs, mdt, etc) can define the type
  * of search easily
