lustre/ptlrpc/nodemap_storage.c
@@ -52,6 +52,7 @@
 #include <linux/types.h>
 #include <uapi/linux/lnet/lnet-types.h>
 #include <uapi/linux/lustre/lustre_idl.h>
+#include <uapi/linux/lustre/lustre_disk.h>
 #include <dt_object.h>
 #include <lu_object.h>
 #include <lustre_net.h>
